# saorsa-multiapp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: styles.css
crates/saorsa-desktop/: Cargo.toml
crates/saorsa-desktop-core/: Cargo.toml
crates/saorsa-desktop-core/src/: config.rs  error.rs  events.rs  lib.rs  state.rs
crates/saorsa-desktop-core/src/services/: media.rs  migration.rs  mod.rs  node.rs  sync.rs  wallet.rs
crates/saorsa-desktop-media/: Cargo.toml
crates/saorsa-desktop-media/src/: audio.rs  buffer.rs  lib.rs  library.rs  playlist.rs
crates/saorsa-desktop-migration/: Cargo.toml
crates/saorsa-desktop-migration/src/: executor.rs  lib.rs  planner.rs  scanner.rs  verifier.rs
crates/saorsa-desktop-sync/: Cargo.toml
crates/saorsa-desktop-sync/src/: cache.rs  chunk.rs  conflict.rs  engine.rs  index.rs  lib.rs  watcher.rs
crates/saorsa-desktop-wallet/: Cargo.toml
crates/saorsa-desktop-wallet/src/: bip39_pq.rs  keystore.rs  lib.rs  session.rs  vault.rs
crates/saorsa-desktop/src/: app.rs  main.rs  router.rs
crates/saorsa-desktop/src/components/: mod.rs  navbar.rs  sidebar.rs  toast.rs
crates/saorsa-desktop/src/hooks/: mod.rs
crates/saorsa-desktop/src/pages/: home.rs  media.rs  migration.rs  mod.rs  not_found.rs  settings.rs  sync.rs  wallet.rs
workspace-hack/: Cargo.toml
