[package]
name = "saorsa-desktop-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core business logic and state management for Saorsa desktop application"

[dependencies]
# Network
saorsa-node.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
