[package]
name = "saorsa-desktop-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "File synchronization engine for Saorsa desktop application"

[dependencies]
# Internal
saorsa-desktop-core.workspace = true

# Network
saorsa-node.workspace = true

# Storage
rusqlite.workspace = true

# File watching
notify.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

# Crypto
sha2.workspace = true

# Utilities
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
directories.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
