[package]
name = "saorsa-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Main Dioxus desktop application for Saorsa network"

[dependencies]
# Internal crates
saorsa-desktop-core.workspace = true
saorsa-desktop-wallet.workspace = true
saorsa-desktop-sync.workspace = true
saorsa-desktop-media.workspace = true
saorsa-desktop-migration.workspace = true

# UI
dioxus.workspace = true
dioxus-router.workspace = true

# Async
tokio.workspace = true

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true

[lints]
workspace = true
